add h2 element from example

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
+  <body>
     <h1>My First Project</h1>
     <p>This is my first project built in an IDE</p>
-    <img src="assets/images/01-02-02_ci-logo.png" alt="code institute logo">
-    
-</body>
+    <h2>VS Code is awesome!</h2>
+    <img src="assets/images/01-02-02_ci-logo.png" alt="code institute logo" />
+
+  </body>
 </html>
