add second paragraph and style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>My First Project</h1>
     <p>This is my first project built in an IDE</p>
+    <p class="text-center">Using the VS Code Source Control Panel makes committing my code even faster</p>
     <h2>VS Code is awesome!</h2>
     <img src="assets/images/01-02-02_ci-logo.png" alt="code institute logo" />
 
